what is going on

--- a/dashboard/templates/dashboard-index.html
+++ b/dashboard/templates/dashboard-index.html
@@ -68,7 +68,7 @@
 	<div class="container-fluid" style="padding-bottom:25px">
 		<form action='' method="POST" onChange="this.submit()";>
 			{% csrf_token %}
-			Date period:
+			Date period: TEST TEST
 			{{ dashboard_date_range_form.date_range }}
 		</form>
 	</div>
