--- a/dashboard/templates/dashboard-index.html
+++ b/dashboard/templates/dashboard-index.html
@@ -68,8 +68,8 @@
 	<div class="container-fluid" style="padding-bottom:25px">
 		<form action='' method="POST" onChange="this.submit()";>
 			{% csrf_token %}
-			Date period: TEST TEST
-			{{ dashboard_date_range_form.date_range }}
+			Date period:
+			{{ dashboard_form.date_range }}
 		</form>
 	</div>
 
@@ -105,7 +105,7 @@
 				  		</div>
 			  			<div class="modal-body">		  				
 		  					{% csrf_token %}
-		  					{{ dashboard_country_filter_form.countries}}
+		  					{{ dashboard_form.countries}}
 
 			  			</div>
 			  			<div class="modal-footer">
@@ -129,7 +129,7 @@
 				  		</div>
 			  			<div class="modal-body">	
 			  				{% csrf_token %}
-		  					{{ dashboard_state_filter_form.states}}	  				
+		  					{{ dashboard_form.states}}	  				
 			  			</div>
 			  			<div class="modal-footer">
 			  				<button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
