--- a/dashboard/templates/dashboard-index.html
+++ b/dashboard/templates/dashboard-index.html
@@ -244,11 +244,11 @@
 			<div style="height: 25px;"></div>
 
 			<div style="height:60px;">
-				<h1 style="text-align: center; line-height:60px;"> {{ confirmed_summ_stat }} </h1>
+				<h1 style="text-align: center; line-height:60px;"> {{ summ_stats.confirmed_summ_stat }} </h1>
 			</div>
 
 			<div style="height:50px;">
-				<p style="text-align: center;" > New today: +{{ increment_confirmed }}   <span style="font-style:italic;color:grey;padding-left:5px">+{{ incr_pct_confirmed }}% </span></p> 
+				<p style="text-align: center;" > New today: +{{ summ_stats.incr_confirmed }}   <span style="font-style:italic;color:grey;padding-left:5px">+{{ summ_stats.incr_pct_confirmed }}% </span></p> 
 			</div>
 
 		</div>
@@ -264,11 +264,11 @@
 			<div style="width:100%;height: 25px;"></div>
 
 			<div style="width:100%;height:60px;">
-				<h1 style="text-align: center; line-height:60px;"> {{ deaths_summ_stat }} </h1>
+				<h1 style="text-align: center; line-height:60px;"> {{ summ_stats.deaths_summ_stat }} </h1>
 			</div>
 
 			<div style="width:100%;height:50px;">
-				<p style="text-align: center;" > New today: +{{ increment_deaths }}    <span style="font-style:italic;color:grey;padding-left:5px">+{{ incr_pct_deaths }}% </span></p> 
+				<p style="text-align: center;" > New today: +{{ summ_stats.incr_deaths }}    <span style="font-style:italic;color:grey;padding-left:5px">+{{ summ_stats.incr_pct_deaths }}% </span></p> 
 			</div>
 
 		</div>
