--- a/dashboard/templates/dashboard-index.html
+++ b/dashboard/templates/dashboard-index.html
@@ -33,7 +33,7 @@
 			display: flex;
 			flex-direction: column;
 			flex-wrap: wrap;
-\		}
+		}
 
 		form.statemodalform ul ul li{
 			width: 270px;
@@ -106,7 +106,6 @@
 			  			<div class="modal-body">		  				
 		  					{% csrf_token %}
 		  					{{ dashboard_form.countries}}
-
 			  			</div>
 			  			<div class="modal-footer">
 			  				<button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
@@ -153,9 +152,9 @@
 
 			<script>
 				_dates = {{ dates|safe }};
-				_outputconfirmed = {{ output_data_list_confirmed|safe}}
-				_outputdeaths = {{ output_data_list_deaths|safe}}
-				_outputnames = {{ output_region_names|safe}}	
+				_outputconfirmed = {{ output_data_list_confirmed|safe }}
+				_outputdeaths = {{ output_data_list_deaths|safe }}
+				_outputnames = {{ output_region_names|safe }}	
 				
 				Highcharts.chart('container1', {
 					chart: {type: 'line'},
@@ -187,7 +186,7 @@
 
 		{% if alert_popup %}
 			<div class="alert alert-info alert-dismissible fade show" role="alert" style="margin-top:10px">
-			    <strong>Hey!</strong> You can click legend labels to select and de-select data from view.
+			    <strong>Hey!</strong> You can click legend labels to hide and unhide data series .
 
 			 	<form method='get'>
 			 		<input type="submit" class="close" style="background-color:#D1ECF1;border:0px;" value="&times" name="close_alert"/>
@@ -230,14 +229,18 @@
 
 	<div style="float:right; width:25%">
 
-
-		<div style="float:right;">
-			<button style="margin-right:60px; margin-bottom: 10px"> Filter <i class="fa fa-filter"></i> </button>
+		<div style="float:right; margin-right:15%">
+			<form action = "", method = "POST", onChange="this.submit();">
+				{% csrf_token %}
+				 <i class="fa fa-filter" style="font-size: 30px; color:#6C757D"></i> {{ summ_stat_filter_form.country }}
+				
+			</form>
 		</div>
-		<div style="clear:both;width:85%;height:200px;background-color:#FDF3DF">
+
+		<div style="clear:both;width:85%;height:200px;background-color:#FDF3DF;color:#23272B">
 
 			<div style="height:40px;background-color:#FEE1A8 ">
-				<p style="text-align: center; font-size:20px; line-height: 40px; font-weight:550"> Gobal confirmed cases: </p>
+				<p style="text-align: center; font-size:20px; line-height: 40px; font-weight:550;"> {{summ_filter_country}} confirmed cases: </p>
 
 			</div>
 
@@ -255,10 +258,10 @@
 
 		<div style="height:25px"></div>
 
-		<div style="width:85%;height:200px;background-color:#FFD6D6">
+		<div style="width:85%;height:200px;background-color:#FFD6D6;color:#23272B">
 
 			<div style="width:100%;height:40px;background-color:#FF0000">
-				<p style="text-align:center;font-size:20px;line-height:40px;font-weight:550"> Global Deaths: </p>
+				<p style="text-align:center;font-size:20px;line-height:40px;font-weight:550"> {{summ_filter_country}} Deaths: </p>
 			</div>
 
 			<div style="width:100%;height: 25px;"></div>
@@ -268,7 +271,7 @@
 			</div>
 
 			<div style="width:100%;height:50px;">
-				<p style="text-align: center;" > New today: +{{ summ_stats.incr_deaths }}    <span style="font-style:italic;color:grey;padding-left:5px">+{{ summ_stats.incr_pct_deaths }}% </span></p> 
+				<p style="text-align: center;" > New today: +{{ summ_stats.incr_deaths }}  <span style="font-style:italic;color:grey;padding-left:5px">+{{ summ_stats.incr_pct_deaths }}% </span></p> 
 			</div>
 
 		</div>
