--- a/dashboard/templates/dashboard-index.html
+++ b/dashboard/templates/dashboard-index.html
@@ -63,25 +63,30 @@
 		<h2> My Dashboard </h2>
 		<p></p>
 		{% if user.is_authenticated %}
-			<p> Test test test</p>
+		{% else %}
+			<p> To save your dashboard data selections, <a href="{% url 'account_login'%}">log in</a> or <a href="{% url 'override_signup' %}"> create an account </a></p>
 		{% endif %}
 
 	</div>
 
-
-	<div class="container-fluid" style="padding-bottom:25px">
-		<form action='' method="POST" onChange="this.submit()";>
-			{% csrf_token %}
-			Date period:
-			{{ dashboard_form.date_range }}
-		</form>
-	</div>
 
 	<!------------------------------------->
 	<!--------- LINE CHART STARTS --------->
 
 	<div style="float:left; width:70%; padding-left:12px; margin: 0 auto">
 		<button type="button" class="btn btn-dark float-right" data-toggle="modal" data-target="#region-filter-modal" style="padding:10px;">Click to modify chart data</button>
+
+		<form action='' method="POST" onChange="this.submit()" style="padding-top:20px">
+			{% csrf_token %}
+			Date period:
+			{{ dashboard_form.date_range }}
+			&emsp;
+			Data type:
+			{{ data_type_form.data_type}}
+		</form>
+
+
+
 
 		<div id = "region-filter-modal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true" style="margin-top:20%">
 			<div class="modal-dialog">
@@ -158,13 +163,13 @@
 				_dates = {{ dates|safe }};
 				_outputconfirmed = {{ output_data_list_confirmed|safe }}
 				_outputdeaths = {{ output_data_list_deaths|safe }}
-				_outputnames = {{ output_region_names|safe }}	
+				_outputnames = {{ output_region_names|safe }}
+				_datatype = {{ data_type|safe }}	
 				
 				Highcharts.chart('container1', {
 					chart: {type: 'line'},
 					rangeSelector: { selected: 4},
-					title: {text: 'Cumulative Confirmed Cases', style: {fontSize:"24px"}},
-					subtitle: {text: 'Data from Johns Hopkins'},
+					title: {text: _datatype + ' Confirmed Cases', style: {fontSize:"24px"}},
 				  	xAxis: {categories: _dates},
 				  	yAxis: {title: {text: '# Confirmed Cases'}},
 				  	plotOptions: {series: {marker: {radius: 1}}},
@@ -206,10 +211,9 @@
 				Highcharts.chart('container2', {
 					chart: {type: 'line'},
 					rangeSelector: { selected: 4},
-					title: {text: 'Cumulative Deaths', style: {fontSize:"24px"}},
-					subtitle: {text: 'Data from Johns Hopkins'},
+					title: {text: _datatype+' Deaths', style: {fontSize:"24px"}},
 				  	xAxis: {categories: _dates},
-				  	yAxis: {title: {text: '# Confirmed Cases'}},
+				  	yAxis: {title: {text: '# Deaths'}},
 				  	plotOptions: {series: {marker: {radius: 1}}},
 					series: [
 						{name: _outputnames[0], data: _outputdeaths[0]},
