--- a/templates/base_generic.html
+++ b/templates/base_generic.html
@@ -55,11 +55,12 @@
         	<div class="collapse navbar-collapse" id="exCollapsingNavbar">
 				<ul class="nav navbar-nav">
 					{% if tab == "dashboard" %}
-						<li class="nav-item"><a href="{% url 'trends-index' %}" class="nav-link">Trends</a></li>
-                		<li class="nav-item"><a href="{% url 'dashboard-index' %}" class="nav-link active">Dashboard</a></li>
+						<li class="nav-item"><a href="{% url 'dashboard-index' %}" class="nav-link active">Dashboard</a></li>
+						<li class="nav-item"><a href="{% url 'trends-index' %}" class="nav-link">Visualizations</a></li>
+                		
             		{% else %}
-            			<li class="nav-item"><a href="{% url 'trends-index' %}" class="nav-link active">Trends</a></li>
-                		<li class="nav-item"><a href="{% url 'dashboard-index' %}" class="nav-link">Dashboard</a></li>
+            			<li class="nav-item"><a href="{% url 'dashboard-index' %}" class="nav-link">Dashboard</a></li>
+            			<li class="nav-item"><a href="{% url 'trends-index' %}" class="nav-link active">Visualizations</a></li>
             		{% endif %}
 				</ul>
 			</div>
@@ -74,8 +75,8 @@
 				<a class="btn btn-secondary navbar-btn" href="{% url 'account_logout' %}">Log Out</a>
 			{% else %}
 				<a class="btn btn-secondary navbar-btn" style="margin: 2px" href="{% url 'account_login'%}">Log In</a>
-<!-- 				<a class="btn btn-secondary navbar-btn" style="margin: 2px" href="{% url 'override_signup' %}">Sign Up</a>
- -->			{% endif %}
+<!-- 			<a class="btn btn-secondary navbar-btn" style="margin: 2px" href="{% url 'override_signup' %}">Sign Up</a>
+ -->		{% endif %}
 
 		</div>
 	</nav>
