changed dashbaord title html

--- a/dashboard/templates/dashboard-index.html
+++ b/dashboard/templates/dashboard-index.html
@@ -2,7 +2,7 @@
 
 
 {% block header %}
-	<title> C19 Dashboard </title>
+	<title> COVID19 Data </title>
 {% endblock %}
 
 {% block content %}
@@ -60,7 +60,7 @@
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 	<div class="container-fluid">
-		<h2> My Dashboard </h2>
+		<h2> Latest COVID-19 Data and Trends </h2>
 		<p></p>
 		{% if user.is_authenticated %}
 		{% else %}
