--- a/dashboard/templates/dashboard-index-mobile.html
+++ b/dashboard/templates/dashboard-index-mobile.html
@@ -121,8 +121,8 @@
 
 					<div id = "region-filter-modal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true" style="clear:both">
 						<div class="modal-dialog">
-							<div class="modal-content">
-								<div class="modal-body" style="align-self: center; padding:5px">
+							<div class="modal-content" style="padding:0; margin:0">
+								<div class="modal-body" style="align-self: center; padding:0; margin:0">
 									<button type="button" class="close" data-dismiss="modal" aria-label="Close">
 							  				<span aria-hidden="true">&times;</span>
 							  		</button>
