refresh with today's data

--- a/dashboard/templates/dashboard-index-mobile.html
+++ b/dashboard/templates/dashboard-index-mobile.html
@@ -155,7 +155,7 @@
 							chart: {type: 'line'},
 							rangeSelector: { selected: 4},
 							title: {text: _datatype + ' Confirmed Cases', style: {fontSize:"16px"}},
-						  	xAxis: {categories: _dates, labels:{style:{fontSize:'10px'}}},
+						  	xAxis: {categories: _dates, tickInterval:4, labels:{style:{fontSize:'10px'}}},
 						  	yAxis: {title: {text: null}},
 						  	plotOptions: {series: {marker: {radius: 1}}},
 						  	legend: {symbolWidth:10,itemStyle:{"fontSize":'10px'}},
@@ -197,7 +197,7 @@
 							chart: {type: 'line'},
 							rangeSelector: { selected: 4},
 							title: {text: _datatype+' Deaths', style: {fontSize:"16px"}},
-						  	xAxis: {categories: _dates, labels:{style:{fontSize:'10px'}}},
+						  	xAxis: {categories: _dates, tickInterval:4, labels:{style:{fontSize:'10px'}}},
 						  	yAxis: {title: {text: null}},
 						  	plotOptions: {series: {marker: {radius: 1}}},
 						  	legend: {symbolWidth:10,itemStyle:{"fontSize":'10px'}},
