--- a/dashboard/templates/dashboard-index.html
+++ b/dashboard/templates/dashboard-index.html
@@ -119,7 +119,7 @@
 		  					{{ dashboard_form.countries}}
 			  			</div>
 			  			<div class="modal-footer">
-			  				<button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+			  				<button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
 			  				<button type="submit" class="btn btn-primary"> Save changes </button>
 			  			</div>
 			  		</div>
@@ -235,6 +235,8 @@
 		</div>
 	</div>
 
+	<div class="vl"></div>
+
 
 	<div style="float:right; width:25%">
 
@@ -249,7 +251,7 @@
 		<div style="clear:both;min-width:230px;width:85%;height:200px;background-color:#FDF3DF;color:#23272B">
 
 			<div style="height:40px;background-color:#FEE1A8 ">
-				<p style="text-align: center; font-size:16px; line-height: 40px; font-weight:550;"> {{summ_filter_country}} confirmed cases: </p>
+				<p style="text-align: center; font-size:18px; line-height: 40px; font-weight:550;"> {{summ_filter_country}} confirmed cases: </p>
 
 			</div>
 
@@ -270,7 +272,7 @@
 		<div style="min-width:230px;width:85%;height:200px;background-color:#FFD6D6;color:#23272B">
 
 			<div style="width:100%;height:40px;background-color:#FF0000">
-				<p style="text-align:center;font-size:16px;line-height:40px;font-weight:550"> {{summ_filter_country}} Deaths: </p>
+				<p style="text-align:center;font-size:18px;line-height:40px;font-weight:550"> {{summ_filter_country}} Deaths: </p>
 			</div>
 
 			<div style="width:100%;height: 25px;"></div>
